# brimyr

./: .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  action.yml  mkdocs.yml  pyproject.toml
.github/workflows/: gate.yml  release.yaml  security.yml
docs/: architecture.md  cli.md  index.md  patch-coverage.md  setup.md
src/brimyr/: __init__.py  cli.py  detect.py  gate.py  git.py  local.py  modes.py  report.py  runner.py  sonar.py
src/brimyr/coverage/: __init__.py  cobertura.py  diff.py  lcov.py  model.py  patch.py
tests/: conftest.py  test_cli.py  test_cobertura.py  test_detect.py  test_diff.py  test_gate.py  test_lcov.py  test_local.py  test_model.py  test_modes.py  test_patch.py  test_report.py  test_runner.py  test_sonar.py
